<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewItemActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"/>
        <EditText
            android:id ="@+id/amount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="50dp"
            android:hint="@string/please_input"
            android:inputType="numberSigned|numberDecimal" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/jiajian"
            android:onClick="onSignClick"/>
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <EditText
            android:id ="@+id/type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="50dp"
            android:hint="@string/please_select"
            android:focusable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/type_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/manage_type"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel"
        android:onClick="editType"/>

</LinearLayout>