<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.KLineActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_select_color"
            android:gravity="center"
            android:text="@string/day_k"
            android:textSize="@dimen/big_text_size"
            />

        <TextView
            android:id="@+id/week"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/week_k"
            android:gravity="center"
            android:textColor="@color/text_select_color"
            android:textSize="@dimen/big_text_size"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/month"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monty_k"
            android:textColor="@color/text_select_color"
            android:textSize="@dimen/big_text_size"
            android:layout_marginStart="20dp"/>


    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout" />


</androidx.constraintlayout.widget.ConstraintLayout>